--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "express": "^4.17.1",
     "firebase": "^7.8.0",
     "fscreen": "^1.0.2",
-    "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "lodash.throttle": "^4.1.1",
     "prettier": "^1.19.1",
@@ -33,25 +32,26 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "mocha": "^6.2.2",
-    "react-test-renderer": "^16.12.0",
-    "start-server-and-test": "^1.10.8",
-    "ts-jest": "^24.3.0",
-    "puppeteer": "^2.1.1",
-    "mocha-junit-reporter": "^1.23.3",
-    "pixelmatch": "^5.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest-junit": "^9.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "cypress": "^3.8.3",
     "cypress-multi-reporters": "^1.2.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5"
+    "husky": "^3.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jest-junit": "^9.0.0",
+    "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.3",
+    "pixelmatch": "^5.1.0",
+    "puppeteer": "^2.1.1",
+    "react-test-renderer": "^16.12.0",
+    "start-server-and-test": "^1.10.8",
+    "ts-jest": "^24.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -92,9 +92,7 @@
     ]
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "hooks": {}
   },
   "proxy": "http://localhost:8081/",
   "jest": {
