--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "firebase": "^7.8.0",
     "fscreen": "^1.0.2",
     "lint-staged": "^9.5.0",
@@ -47,6 +48,7 @@
     "jest-junit": "^9.0.0",
     "mocha": "^6.2.2",
     "mocha-junit-reporter": "^1.23.3",
+    "nodemon": "^2.0.2",
     "pixelmatch": "^5.1.0",
     "puppeteer": "^2.1.1",
     "react-test-renderer": "^16.12.0",
@@ -60,13 +62,14 @@
     ]
   },
   "scripts": {
-    "start": "concurrently npm:server npm:dev",
+    "start": "concurrently npm:server-nodemon npm:dev",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{ts,tsx}",
     "server": "node server.js",
+    "server-nodemon": "nodemon server.js",
     "test:ci": "jest --ci --runInBand --reporters=default --reporters=jest-junit --coverage",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --browser chrome",
