--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/twilio-video": "^2.0.10",
+    "axios": "^0.19.2",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
